# fire-ant

./: Cargo.toml  Embed.toml  README.md  flake.nix
.cargo/: config.toml
src/: main.rs  utils.rs  v2_control_board.rs
src/boards/: mod.rs  rp2354_dev_and_sx1280.rs  v2_control_board.rs
src/drivers/: bldc.rs  logger.rs  mod.rs  radio.rs  rgb_led.rs
src/drivers/radio/: irq.rs  mod.rs  opcode.rs  radio.rs  radio_config.rs  status.rs
