[package]
edition = "2024"
name = "fire-ant"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "1.0.0" }
embassy-executor = { version = "0.10", features = [
    "platform-cortex-m",
    "executor-thread",
    "defmt",
] }
embassy-rp = { version = "0.10", features = [
    "defmt",
    "time-driver",
    "critical-section-impl",
    "rp235xa",
    "binary-info",
] }
embassy-sync = { version = "0.8.0", default-features = false }
embassy-time = { version = "0.5", features = ["defmt"] }

defmt = "1"
defmt-rtt = "1"
panic-probe = { version = "1", features = ["print-defmt"] }
heapless = "0.9.3"
embassy-usb = "0.6.0"
static_cell = "2.1.1"

# We're using a Pico 2 by default on this template
#rp-pico2 = "0.9" # TODO: Do we have that crate already ?

# cargo build/run
[profile.dev]
debug = 2
debug-assertions = true
opt-level = 2
overflow-checks = true

# cargo build/run --release
[profile.release]
debug = 2
debug-assertions = false
lto = 'fat'
opt-level = 2
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
debug = false
debug-assertions = false
overflow-checks = false
opt-level = 0

[profile.release.build-override]
debug = false
debug-assertions = false
overflow-checks = false
opt-level = 0

# cargo test
[profile.test]
debug = 2
debug-assertions = true
opt-level = 2
overflow-checks = true

# cargo test --release
[profile.bench]
debug = 2
debug-assertions = false
lto = 'fat'
opt-level = 3
